src/test/ui/parser/pat-ranges-3.rs
// Parsing of range patterns

fn main() {
    let 10 ..= 10 + 3 = 12; //~ expected one of `:`, `;`, or `=`, found `+`
}
